[package]
name = "anamix_ir"
version = "0.1.0"
edition = "2024"
description = "Intermediate representation for Anamix"
readme = "README.md"
repository = "https://github.com/KyteKode/anamix_ir"
license = "AGPL-3.0-or-later"
keywords = ["anamix", "ir"]

[lib]
name = "anamix_ir"
path = "src/lib.rs"
crate-type = ["rlib"]