[package]
name = "anamix_ir"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
either = "1.16.0"
hex = "0.4.3"
id-arena = "2.3.0"
md5 = "0.8.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.151"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
